<resources>
    <string name="app_name">VOLT</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="employee_id">Employee ID</string>
    <string name="first_name">First Name</string>
    <string name="check_in">Check In</string>
    <string name="new_employee">New Employee</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="location_code">Location Code</string>
    <string name="last_name">Last Name</string>
    <string name="submit">Submit</string>
    <string name="or">- OR -</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login Failed"</string>
    <string name="connection_error">"Connection Error"</string>
    <string name="no_connection">"No Internet Connection"</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="task">Task</string>
    <string name="offline_logs">Offline Logs:</string>
    <string name="offline">Offline...</string>
    <string name="all_logs">All Logs:</string>
    <string name="recent_logs">Recent Logs:</string>
</resources>