<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pane_background"
    android:fontFamily="@font/noto_sans"
    tools:context=".ui.check_in.pages.LogFragment">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans">

            <TextView
                android:id="@+id/textViewRecent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/recent_logs"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/offlineLogConstraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/custom_constraint"
                android:elevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRecent">

                <TextView
                    android:id="@+id/textViewOfflineSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="Offline Check Ins:"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TableLayout
                    android:id="@+id/offlineTableSignIn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/custom_table_1"
                    android:orientation="vertical"
                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewOfflineSignIn">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/offlineTableNameSignIn"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:fontFamily="@font/noto_sans"
                            android:gravity="center"
                            android:text="@string/name"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/offlineTableTimeSignIn"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.25"
                            android:fontFamily="@font/noto_sans"
                            android:gravity="center"
                            android:text="@string/time"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/offlineTableLocationSignIn"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.25"
                            android:fontFamily="@font/noto_sans"
                            android:gravity="center"
                            android:text="@string/location"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/offlineTableTaskSignIn"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.25"
                            android:fontFamily="@font/noto_sans"
                            android:gravity="center"
                            android:text="@string/task"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/offlineTableStatusSignIn"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.25"
                            android:fontFamily="@font/noto_sans"
                            android:gravity="center"
                            android:text="Status"
                            android:textColor="@color/white" />

                    </TableRow>

                </TableLayout>

                <TextView
                    android:id="@+id/textViewOfflineSignOuts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="Offline Check Outs:"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/offlineTableSignIn" />

                <TableLayout
                    android:id="@+id/offlineTableSignOut"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/custom_table_1"
                    android:orientation="vertical"
                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewOfflineSignOuts">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/offlineTableNameSignOut"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:fontFamily="@font/noto_sans"
                            android:gravity="center"
                            android:text="@string/name"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/offlineTableTimeSignOut"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.25"
                            android:fontFamily="@font/noto_sans"
                            android:gravity="center"
                            android:text="@string/time"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/offlineTableLocationSignOut"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.25"
                            android:fontFamily="@font/noto_sans"
                            android:gravity="center"
                            android:text="@string/location"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/offlineTableTaskSignOut"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.25"
                            android:fontFamily="@font/noto_sans"
                            android:gravity="center"
                            android:text="@string/task"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/offlineTableStatusSignOut"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.25"
                            android:fontFamily="@font/noto_sans"
                            android:gravity="center"
                            android:text="Status"
                            android:textColor="@color/white" />

                    </TableRow>

                </TableLayout>

                <Button
                    android:id="@+id/dataPushButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:enabled="false"
                    android:text="@string/offline"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/offlineTableSignOut"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/clearLogsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:text="Clear Logs"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/offlineTableSignOut"
                    app:layout_constraintVertical_bias="1.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/totalLogConstraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="200dp"
                android:background="@drawable/custom_constraint"
                android:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/offlineLogConstraint">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/all_logs"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TableLayout
                    android:id="@+id/allTable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/custom_table_1"
                    android:orientation="vertical"
                    android:padding="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/allTableName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:fontFamily="@font/noto_sans"
                            android:gravity="center"
                            android:text="@string/name"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/allTableTime"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.25"
                            android:fontFamily="@font/noto_sans"
                            android:gravity="center"
                            android:text="@string/time"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/allTableLocation"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.25"
                            android:fontFamily="@font/noto_sans"
                            android:gravity="center"
                            android:text="@string/location"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/allTableTask"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.25"
                            android:fontFamily="@font/noto_sans"
                            android:gravity="center"
                            android:text="@string/task"
                            android:textColor="@color/white" />


                    </TableRow>

                </TableLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>